--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "require": {},
     "require-dev": {
             "phpunit/phpunit" : "~4.3" 
+        },
+    "autoload":{
+        "psr-4":{
+            "graychen\\container\\" : "src"
         }
+    }
 }
